# mailgun2discord

./: .gitignore  README.md  main.py  pyproject.toml
