[tool.poetry]
name = "mailgun2discord"
version = "0.1.1"
description = ""
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.17"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
